k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: cloud-watch-tower
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
