k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: ecommerce
  namespace: ecommerce
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: ecommerce
    # This selector will be updated during blue-green deployment
    # Initially points to blue version
    version: blue
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
